homework week 10 done

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
             <h1>Week 10 Homework</h1>
             <div id="homework">
             </div>
+            <div id="homework2">
+            </div>
         </body>
     </html>
